--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <p class="card-text">FIFA 22 Blurred the line between the real and the virtual worlds, bringing the players, teams, and atmospheres of The World’s Game to life.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -105,7 +105,7 @@
               <p class="card-text">Blend your style and experience on a global, competitive stage. You need to attack and defend your side using sharp gunplay and tactical abilities. </p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -115,7 +115,7 @@
               <p class="card-text">PUBG PC is a Battle Royale Xbox game created independently by Lightspeed & Quantum Studios of Krafton.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
       </div>
       <h1 id="PlayStation" style="color: aliceblue; font-family: 'Fira Sans', sans-serif;"><br>PlayStation<hr></h1>
@@ -128,7 +128,7 @@
               <p class="card-text">The focus of the game builds on the experiences of Chief John-117, one of a group of supersoldiers code-named Spartans, and his (AI) companion, Cortana.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -138,7 +138,7 @@
               <p class="card-text">Call of Duty®: HAVOC propels players into a near future, 21st Century Cold War, where technology and weapons have converged to create a new generation of warfare.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -148,7 +148,7 @@
               <p class="card-text">FIFA 22 Blurred the line between the real and the virtual worlds, bringing the players, teams, and atmospheres of The World’s Game to life.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
       </div>
       <h1 id="PC" style="color: azure; font-family: 'Fira Sans', sans-serif;"><br>PC<hr></h1>
@@ -161,7 +161,7 @@
               <p class="card-text">Cyberpunk 2077 is an open-world, action-adventure story set in Night City, a megalopolis obsessed with power, glamour and body modification. </p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -171,7 +171,7 @@
               <p class="card-text">Call of Duty®: HAVOC propels players into a near future, 21st Century Cold War, where technology and weapons have converged to create a new generation of warfare.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
         <div class="col-md-4 text-center">
           <div class="card text-white bg-dark" style="width: 18rem;">
@@ -181,7 +181,7 @@
               <p class="card-text">PUBG PC is a Battle Royale PC version game created independently by Lightspeed & Quantum Studios of Krafton.</p>
               <a href="#" class="btn btn-outline-warning position-absolute bottom-0 start-50 translate-middle btn-lg" style="padding-left: 70px; padding-right: 70px;"> Play </a>
             </div>
-          </div>
+          </div><br>
         </div>
       </div>
   </div><br>
